# coursework5

./: .env.example  README.md  pyproject.toml  requirements.txt
config/: celery.py  celery_beat.p.py  celery_beat_schedule.py  settings.py  urls.py
habits/: admin.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_options_habit_created_at_and_more.py  0003_habitexecution.py
tg_bot/: handlers.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
tg_bot/management/commands/: delete_webhook.py  run_polling.py  set_webhook.py
tg_bot/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_avatar_and_more.py
