[project]
name = "coursework5"
version = "0.1.0"
description = ""
authors = [
    {name = "Amayak Avedyan",email = "Amajk577@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.20.1"
black = "^26.3.1"
isort = "^8.0.1"

